syntax = "proto3";

package api;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";

service UserService {
    // Create a new user
    rpc CreateUser (CreateUserRequest) returns (User) {}
    
    // Get a user by ID
    rpc GetUser (GetUserRequest) returns (User) {}
    
    // Update a user
    rpc UpdateUser (UpdateUserRequest) returns (User) {}
    
    // Delete a user
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
    
    // List users with pagination
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    UserStatus status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

enum UserStatus {
    USER_STATUS_UNSPECIFIED = 0;
    USER_STATUS_ACTIVE = 1;
    USER_STATUS_INACTIVE = 2;
}

message CreateUserRequest {
    string email = 1;
    string name = 2;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    optional string email = 2;
    optional string name = 3;
    optional UserStatus status = 4;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message ListUsersRequest {
    int32 page = 1;
    int32 per_page = 2;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
    int32 page = 3;
    int32 per_page = 4;
}